# motionSystem

./: LICENSE  Makefile.am  README.md  configure.ac
cgi_application/: Makefile.am  configure.ac
cgi_application/src/: Makefile.am  index.c
motion_detector_mcu/: Makefile.am  configure.ac
motion_detector_mcu/STSW-STM32072/: Makefile.am
motion_detector_mcu/STSW-STM32072/CMSIS/: Makefile.am  Makefile.in
motion_detector_mcu/STSW-STM32072/CMSIS/CM3/: Makefile.am
motion_detector_mcu/STSW-STM32072/CMSIS/CM3/CoreSupport/: Makefile.am
motion_detector_mcu/STSW-STM32072/CMSIS/CM3/DeviceSupport/: Makefile.am
motion_detector_mcu/STSW-STM32072/CMSIS/CM3/DeviceSupport/ST/: Makefile.am
motion_detector_mcu/STSW-STM32072/CMSIS/CM3/DeviceSupport/ST/STM32L1xx/: Makefile.am
motion_detector_mcu/STSW-STM32072/STM32L1xx_StdPeriph_Driver/src/: Makefile.am
motion_detector_mcu/gdb/: debug.gdb.in
motion_detector_mcu/include/: mcu_init.h  mcu_utils.h  motion_detection_manager.h
motion_detector_mcu/src/: Makefile.am  mcu_init.c  mcu_utils.c  motion_detection_manager.c  motion_detector_mcu.c  stm32_flash.ld
motion_gateway_rpi/: configure.ac
motion_gateway_rpi/include/: GatewayManager.h
motion_gateway_rpi/src/: GatewayManager.cpp  Makefile.am  motion_gateway_rpi.cpp
motion_server/: configure.ac
motion_server/src/: Makefile.am  main.c
